# GeoKernel-Lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: windows.yml
apps/: geokernel_demo.cpp
benchmarks/: geokernel_benchmarks.cpp  results.csv  results.md
core/include/geokernel/: geokernel.hpp
core/include/geokernel/algorithm/: arrangement.hpp  constrained_delaunay.hpp  convex_hull.hpp  delaunay.hpp  polygon_boolean.hpp  segment_intersection.hpp
core/include/geokernel/core/: constants.hpp  geometry_utils.hpp  intersections.hpp  polygon.hpp  predicate_context.hpp  predicates.hpp  (+1 more)
docs/: algorithms.md  api_reference.md  arrangement.md  delaunay.md  design_notes.md  edge_cases_report.md  exact_predicate_vs_exact_construction.md  interview_notes.md  known_limitations.md  polygon_boolean.md  predicates.md  release_v1.0.0.md  release_v1.0.1.md  robustness.md  robustness_failures.md  setup_windows.md  sweep_line.md  visualization_guide.md
examples/: closest_pair.json  convex_hull.json  delaunay.json  half_plane_intersection.json  polygon_boolean.json  polygon_clipping.json  predicate_compare.json  rotating_calipers.json  segment_arrangement.json  segment_intersection.json  triangulation.json
python/geokernel_lite/: __init__.py  case_loader.py  runner.py  visualization.py
scripts/: bootstrap_windows.ps1  generate_assets.py
tests/cases/: catalog.json  predicate_failures.json
tests/cpp/: test_geokernel.cpp
tests/python/: test_case_loader.py  test_runner_contract.py  test_visualization_data.py
visualizer/: app.py
(+3 files in other folders)
